[gd_scene load_steps=13 format=2]

[ext_resource path="res://ships/enemy.gd" type="Script" id=1]
[ext_resource path="res://ships/razor2.png" type="Texture" id=2]
[ext_resource path="res://ships/razor2dualLasers.png" type="Texture" id=3]
[ext_resource path="res://ships/enemyWeapon.gd" type="Script" id=4]
[ext_resource path="res://bullets/EnemyLaser.tscn" type="PackedScene" id=5]
[ext_resource path="res://effects/shields.png" type="Texture" id=6]
[ext_resource path="res://effects/shields.wav" type="AudioStream" id=7]
[ext_resource path="res://effects/fireSpritesheet.png" type="Texture" id=8]
[ext_resource path="res://effects/crash.ogg" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 92.5764

[sub_resource type="Animation" id=2]
resource_name = "explosion"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 19 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion/ExplosionNoise:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "shield"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield/ShieldNoise:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shield:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.242, 0.314 ), Vector2( 0.43, 0.27 ), Vector2( 0.25, 0.25 ) ]
}

[node name="enemy" type="Area2D" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="weapons" type="Node2D" parent="."]

[node name="Dual Lasers" type="Sprite" parent="weapons"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
script = ExtResource( 4 )
Bullet = ExtResource( 5 )

[node name="ReloadTimer" type="Timer" parent="weapons/Dual Lasers"]
wait_time = 0.33

[node name="Muzzles" type="Node2D" parent="weapons/Dual Lasers"]
scale = Vector2( 4, 4 )

[node name="Position2D" type="Position2D" parent="weapons/Dual Lasers/Muzzles"]
position = Vector2( 92.7875, -67.6682 )
scale = Vector2( 0.25, 0.25 )

[node name="Position2D2" type="Position2D" parent="weapons/Dual Lasers/Muzzles"]
position = Vector2( 92.7875, 66.643 )
scale = Vector2( 0.25, 0.25 )

[node name="ShootCycleTimer" type="Timer" parent="weapons/Dual Lasers"]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Shield" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="ShieldNoise" type="AudioStreamPlayer2D" parent="Shield"]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="ShieldTimer" type="Timer" parent="Shield"]
wait_time = 0.4
one_shot = true

[node name="Explosion" type="Sprite" parent="."]
texture = ExtResource( 8 )
vframes = 4
hframes = 5
frame = 19
region_rect = Rect2( 27, 203, 150, 175 )

[node name="ExplosionNoise" type="AudioStreamPlayer2D" parent="Explosion"]
stream = ExtResource( 9 )

[node name="DestructionTimer" type="Timer" parent="Explosion"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 2 )
anims/shield = SubResource( 3 )

[connection signal="timeout" from="weapons/Dual Lasers/ShootCycleTimer" to="weapons/Dual Lasers" method="_on_ShootCycleTimer_timeout"]
[connection signal="timeout" from="Shield/ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="Explosion/DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
